2001-02-14  Nick Clifton  <nickc@redhat.com>

	* Makefile.am (BFD32_BACKENDS_CFILES): Remove peigen.c
	(BFD64_BACKENDS): Add pepigen.c
	Add rules to create peigen.c and pepigen.c from peXXigen.c.

	* Makefile.in: Regenerate.
	* configure:  Regenerate.
	* po/POTFILES.in: Regenerate.
	* po/bfd.pot: Regenerate.

2001-02-14  H.J. Lu  <hjl@gnu.org>

	* libcoff-in.h (pe_tdata): Add members target_subsystem and
	force_minimum_alignment.

2001-02-14  Bo Thorsen  <bo@suse.de>

	* elf64-x86-64.c: Small formatting fixes and rearrangements of code.
	(elf64_86_64_size_info): Struct added to fix a problem
	with the hashtable string entries.
	(elf64_x86_64_adjust_dynamic_symbol): Add generation of .got.plt.
	(elf64_x86_64_size_dynamic_sections): A FIXME removed.
	(elf64_x86_64_size_dynamic_sections): Fix a dynamic entry and
	remove the FIXME for this.
	(elf64_x86_64_adjust_dynamic_symbol): Fix check for unneeded .plt
	section. Also removed the FIXME for it.
	(x86_64_elf_howto_table): Use bfd_elf_generic_reloc.
	(ELF_DYNAMIC_INTERPRETER): Fix the name of the dynamic linker.
	(elf64_x86_64_finish_dynamic_sections): Enable .got.plt writing.

2001-02-13  Richard Henderson  <rth@redhat.com>

	* elfxx-ia64.c (elfNN_ia64_final_link): Set __gp if required
	and not user provided.

2001-02-13  Kazu Hirata  <kazu@hxi.com>

	* vms.c (vms_print_symbol): Remove unreachable code.

	* rs6000-core.c: Fix formatting.

2001-02-13  David Mosberger  <davidm@hpl.hp.com>

	* peicode.h (coff_swap_filehdr_out) [COFF_IMAGE_WITH_PE]: Define
	as _bfd_XXi_only_swap_filehdr_out.
	(pe_mkobject) [PEI_FORCE_MINIMUM_ALIGNMENT]: Set
	pe->force_minimum_alignment to TRUE.
	(pe_mkobject) [PEI_TARGET_SUBSYSTEM]: Set pe->target_subsystem to
	PEI_TARGET_SUBSYSTEM.
	(pe_print_private_bfd_data): Call
	_bfd_XX_print_private_bfd_data_common() instead of
	_bfd_pe_print_private_bfd_data_common().
	(pe_bfd_copy_private_bfd_data): Call
	_bfd_XX_bfd_copy_private_bfd_data_common() instead of