@@ -1,5 +1,8 @@
 2001-02-14  Nick Clifton  <nickc@redhat.com>
 
+	* ecoff.c (bfd_debug_section): Update to initialise new fields in
+	asection structure.
+
 	* Makefile.am (BFD32_BACKENDS_CFILES): Remove peigen.c
 	(BFD64_BACKENDS): Add pepigen.c
 	Add rules to create peigen.c and pepigen.c from peXXigen.c.
